--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.7.4",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "element-plus": "^2.8.0",
     "jquery": "^3.7.1",
+    "js-base64": "^3.7.7",
     "pagepiling.js": "^1.5.6",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
