--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.8.0",
     "jquery": "^3.7.1",
     "js-base64": "^3.7.7",
+    "moment": "^2.30.1",
     "pagepiling.js": "^1.5.6",
     "vue": "^3.4.29",
     "vue-virtual-scroller": "^2.0.0-beta.8"
